# tauri-plugin-router

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
examples/hello-world/: index.html  package.json  pnpm-lock.yaml
examples/hello-world/src/: main.ts  styles.css
examples/hello-world/src-tauri/: Cargo.toml  tauri.conf.json
examples/hello-world/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
src/: context.rs  error.rs  handler.rs  lib.rs  response.rs  router.rs
src/extract/: app_handle.rs  bytes.rs  header_map.rs  mod.rs  request.rs  webview.rs  webview_window.rs  window.rs
